Modifica UC con implementazione relative estensioni

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC11.tex
@@ -20,7 +20,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC .1 - Marca postazione igienizzata}
+\subsubsection{UC 6 - Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, igienizzatore, amministratore;
@@ -33,7 +33,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’utente contrassegna la postazione come igienizzata;
 		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore, che può essere dovuto al seguente fattore:
 		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore.
+			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
@@ -51,7 +51,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’utente contrassegna la postazione come sporca;
 		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore, che può essere dovuto al seguente fattore:
 		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore.
+			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
@@ -69,7 +69,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’utente contrassegna la postazione come libera;
 		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore che può essere dovuto al seguente fattore:
 		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore.
+			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
@@ -87,7 +87,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 		\item l’utente contrassegna la postazione come occupata;
 		\item il sistema elabora correttamente la richiesta o, in alternativa, restituisce un errore che può essere dovuto al seguente fattore:
 		\begin{itemize}
-			\item la postazione selezionata è stata marcata come disabilitata da un amministratore.
+			\item la postazione selezionata è stata marcata come disabilitata da un amministratore[UC1.2].
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
