--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -2,8 +2,8 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
 \begin{itemize}
     \item il codice identificativo del rischio;
     \item lo stadio, o gli stadi, in cui si è verificato (vedasi il capitolo 4, sulla pianificazione);
-    \item il grado di occorrenza (in questo caso indicativo di quante volte si sia realmente verificato);
-    \item una breve descrizione più specifica dell'evenienza e di come sia stata effettivamente mitigata.
+    \item il grado di occorrenza (in questo caso indicativo di quanto spesso si sia realmente verificato);
+    \item una breve descrizione specifica dell'evenienza e di come sia stata effettivamente mitigata.
 \end{itemize}
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
