--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
@@ -3,4 +3,7 @@
 
 \subsection{Motivazioni della scelta}\label{sec:Motivazioni}
 \input{src/ModelloSviluppo/src/Motivazioni.tex}
+
+\subsection{Incrementi}\label{sec:Incrementi}
+\input{src/ModelloSviluppo/src/Incrementi.tex}
     
