--- a/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
@@ -33,6 +33,9 @@
 \DefinizioneGlossario{È un framework open source per lo sviluppo di applicazioni su piattaforma Java. Ad esso sono associati altri progetti, che hanno nomi composti come Spring Boot, Spring Data, 
 Spring Batch. Questi progetti sono stati ideati per fornire funzionalità aggiuntive al framework.}
 
+\TermineGlossario{Stadio} 
+\DefinizioneGlossario{Si intende la sotto-fase relativa alla pianificazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}.}
+
 \TermineGlossario{Stakeholder}
 \DefinizioneGlossario{Sono le persone influenti per il prodotto: dicono se una certa opportunità è buona. Possono essere chi usa il prodotto, chi compra il prodotto, chi sostiene i costi di realizzazione, chi verifica le esecuzioni dei processi.}
 
