--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -1,4 +1,4 @@
-Di seguito verrà riportata la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette stadi e tra di essi si possono riconoscere essenzialmente quattro \glo{fasi}: analisi, progettazione, codifica e validazione. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso. Nei successivi paragrafi verranno descritti ognuno più nel dettaglio.\\
+Di seguito verrà riportata la struttura generale in cui verrà organizzato l'intero \glo{processo} di lavoro. In questo caso sono stati specificati in totale sette \glo{stadi} raggruppati essenzialmente in quattro \glo{fasi}. Per ogni stadio vengono individuati quelli che attualmente sono gli obiettivi che il gruppo \Gruppo{} si prefigge di raggiungere entro la data indicata di fine dello stesso. Nei successivi paragrafi verra descritto ogni stadio più nel dettaglio.\\
 Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è concettualmente collocato all'interno della rispettiva fase:
 
 \begin{itemize}
