--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
@@ -33,5 +33,5 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'a
                     \item calcolo del preventivo iniziale relativo allo svolgimento del lavoro;
                 \end{itemize}
                 \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-                \item consegna del \glo{deliverable} necessario, in vista dell'\glo{incontro formale} con il committente per la \RR{}.
+                \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RR{}.
             \end{itemize}
