--- a/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/I.tex
@@ -12,6 +12,9 @@
 \DefinizioneGlossario{Riunione fra i membri del gruppo in cui si discutono temi riguardanti il progetto e si prendono delle decisioni.
 In questi incontri, normalmente fisici, viene redatto un verbale con un segretario che si occupa della sua stesura e successiva pubblicazione nel repository della documentazione.}
 
+\TermineGlossario{Incrementale (modello)}
+\DefinizioneGlossario{Si intende, nell'ambito dell'ingegneria del software, un modello adattivo di sviluppo di un progetto software, basato sulla successione di specifici passi principali. Prevede rilasci multipli, realizzando un incremento di funzionalità e avvicinandosi sempre più alle attese.}
+
 \TermineGlossario{Ingresso}
 \DefinizioneGlossario{Per ingresso presso un luogo di un'organizzazione si intende l'attività di spostamento fisico in cui un'utente passa da una posizione geografica non soggetta a tracciamento ad una interna ad un perimetro che delimita un luogo soggetto a tracciamento.}
 
