--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
@@ -1,4 +1,4 @@
-Questo stadio è relativo in gran parte allo sviluppo del codice e la sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare. In questa \glo{fase} principale di codifica ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto, conformemente a quanto richiesto dal secondo \glo{incontro formale} di revisione programmato.
+Questo stadio è relativo in gran parte allo sviluppo del codice e la sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare. In questa \glo{fase} principale di codifica ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto, conformemente a quanto richiesto dal secondo incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
         15 febbraio - 1 marzo 2021;
@@ -19,5 +19,5 @@ Questo stadio è relativo in gran parte allo sviluppo del codice e la sua conclu
             \item rifinitura e miglioramento delle \glo{interfacce grafiche};
             \item \glo{verifica} del codice e delle funzionalità del prodotto;
             \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-            \item consegna del \glo{deliverable} necessario, in vista dell'\glo{incontro formale} con il committente per la \RP{}.
+            \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RP{}.
         \end{itemize}
