Modificati UML UC
modificati gli UML degli UC con l'aggiunta delle estensioni e conditions

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
@@ -20,7 +20,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 41 - Marca postazione igienizzata}
+\subsubsection{UC 40 - Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -35,7 +35,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 42 - Annulla postazione igienizzata}
+\subsubsection{UC 41 - Annulla postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -50,7 +50,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 43 - Marca stanza igienizzata}
+\subsubsection{UC 42 - Marca stanza igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -68,7 +68,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 43.1 - Errore marcatura stanza: una postazione all'interno della stanza selezionata non è igienizzata}
+\subsubsection{UC 42.1 - Errore marcatura stanza: una postazione all'interno della stanza selezionata non è igienizzata}
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
 \item \textbf{Precondizione:} l'utente sta cercando di marcare una stanza come completamente igienizata, ma una postazione nella stanza selezionata risulta essere non igienizzata;
@@ -76,7 +76,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 \item \textbf{Scenario principale:} l'utente visualizza un messaggio di errore in cui viene informato che la stanza non può essere marcata come igienizzata in quanto al suo interno è presente almeno una postazione non igienizzata.
 \end{itemize}
 
-\subsubsection{UC .4 - Marca stanza non igienizzata}
+\subsubsection{UC 43 - Marca stanza non igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -91,7 +91,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC .5 - Disabilita stanza}
+\subsubsection{UC 44 - Disabilita stanza}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
