--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -39,7 +39,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 1.1 - Errore prenotazione: prenotazione per determinata data ed ora già esistente}
+\subsubsection{UC 1.1 - Errore prenotazione: prenotazione per determinata fascia oraria già esistente}
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
 \item \textbf{Precondizione:} l'utente sta cercando di prenotare una postazione in una data ed orario in cui la postazione risulta già prenotata da un altro utente;
