aggiunto piano di qualifica

--- a/DocumentiEsterni/PianoDiQualifica/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/main.tex
@@ -38,12 +38,17 @@
 \section{Specifica dei test}\label{sec:Specifica-dei-test}
 \input{src/SpecificaDeiTest/main.tex}
 
+\appendix
+\newpage
+\section{Standard di qualità}\label{sec:Standard-di-qualita}
+\input{src/StandardQualita/main.tex}
+
 \newpage
 \section{Resoconto verifica}\label{sec:Resoconto-verifica}
 \input{src/ResocontoVerifica/main.tex}
 
 \newpage
-\section{Autovalutazione}\label{sec:Autovalutazione}
+\section{Valutazioni per il miglioramento}\label{sec:Valutazioni-per-il-miglioramento}
 \input{src/Autovalutazione/main.tex}
 
 \end{document}
