--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC40.tex
@@ -68,7 +68,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 42.1 - Errore marcatura stanza: una postazione all'interno della stanza selezionata non è igienizzata}
+\subsubsection{UC 42.1 - Visualizzazione errore marcatura stanza: una postazione all'interno della stanza selezionata non è igienizzata}
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
 \item \textbf{Precondizione:} l'utente sta cercando di marcare una stanza come completamente igienizata, ma una postazione nella stanza selezionata risulta essere non igienizzata;
