--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC5.tex
@@ -39,7 +39,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 1.1 - Errore prenotazione: prenotazione per determinata fascia oraria già esistente}
+\subsubsection{UC 1.1 - Visualizzazione errore di prenotazione: prenotazione per determinata fascia oraria già esistente}
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
 \item \textbf{Precondizione:} l'utente sta cercando di prenotare una postazione in una data ed orario in cui la postazione risulta già prenotata da un altro utente;
@@ -47,7 +47,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Scenario principale:} l'utente visualizza un messaggio di errore in cui viene informato che la postazione risulta già occupata per la data e ora da lui scelti.
 \end{itemize}
 
-\subsubsection{UC 1.2 - Errore prenotazione: postazione disabilitata da un amministratore}
+\subsubsection{UC 1.2 - Visualizzazione errore di prenotazione: postazione disabilitata da un amministratore}
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
 \item \textbf{Precondizione:} l'utente sta cercando di prenotare una postazione che risulta essere stata disabilitata da un amministratore;
@@ -91,7 +91,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 3.1 - Errore cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
+\subsubsection{UC 3.1 - Visualizzazione errore di cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
 \item \textbf{Precondizione:} l'utente sta cercando di cancellare una prenotazione già usufruita in un orario passato;
@@ -116,7 +116,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 4.1 - Errore visualizzazione: l'utente non ha alcuna prenotazione attiva}
+\subsubsection{UC 4.1 - Visualizzazione errore di prenotazione attiva: l'utente non ha alcuna prenotazione attiva}
 \begin{itemize}
 \item \textbf{Attori primari:} utente autenticato, amministratore;
 \item \textbf{Precondizione:} l'utente sta cercando di visualizzare la lista delle sue prenotazioni, non avendone però alcuna attiva;
