--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_interessate.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_interessate.tex
@@ -1,7 +1,7 @@
 \begin{itemize}
 \item {\bf Amazon Web Services(AWS):} insieme di servizi di cloud computing utili per il progetto tra cui:
 \begin{enumerate}
-\item {\bf Lambda:} AWS Lambda servizio di elaborazione serverless per l'esecuzione del proprio codice. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
+\item {\bf Lambda:} AWS Lambda consente di eseguire codice senza dover effettuare il provisioning né gestire server. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
 \item {\bf API gateway:} servizio API per la comunicazione con Lambda;
 \item {\bf DynamoDB:} database non relazionale, orientato a dati valore-chiave e documenti;
 \item {\bf CloudWatch:} servizio di monitoraggio e osservabilità creato per ingegneri, sviluppatori, ingegneri responsabili dell'affidabilità del sito (SRE) e manager IT DevOps;
