--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_interessate.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Tecnologie_interessate.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
 \item {\bf Lambda:} AWS Lambda consente di eseguire codice senza dover effettuare il provisioning né gestire server. I prezzi sono calcolati in base al tempo effettivo di elaborazione;
 \item {\bf API gateway:} servizio API per la comunicazione con Lambda;
-\item {\bf DynamoDB:} database non relazionale, orientato a dati valore-chiave e documenti;
+\item {\bf DynamoDB:} database che supporta i modelli di dati di tipo documento e di tipo chiave-valore che offre prestazioni di pochi millisecondi a qualsiasi scala;
 \item {\bf CloudWatch:} servizio di monitoraggio e osservabilità creato per ingegneri, sviluppatori, ingegneri responsabili dell'affidabilità del sito (SRE) e manager IT DevOps;
 \end{enumerate}
 \item {\bf NodeJs:} piattaforma open source per l'esecuzione di codice JavaScript(TypeScript) server-side;
