--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiAccettazione/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiAccettazione/main.tex
@@ -9,9 +9,9 @@
         \textbf{Codice}}     & \textcolor{\secondaryColor}
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Esito}} \\
 
-        TA1&
-        L'utente autenticato e l'amministratore devono poter essere in grado di creare una prenotazione.\newline
-        All'utente autenticato e all'amministratore viene chiesto di:
+        TA1.1&
+        Il dipendente registrato e l'amministratore devono poter essere in grado di creare una prenotazione.\newline
+        Al dipendente registrato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
@@ -21,9 +21,9 @@
             \item verificare che la prenotazione venga eliminata per un motivo specificato.
         \end{itemize}&
         NI\\
-        TA2&
-        L'utente autenticato e l'amministratore devono poter essere in grado di modificare una prenotazione.\newline
-        All'utente autenticato e all'amministratore viene chiesto di:
+        TA1.2&
+        Il dipendente registrato e l'amministratore devono poter essere in grado di modificare una prenotazione.\newline
+        Al dipendente registrato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di modifica di una prenotazione;
             \item verificare che sia possibile modificare una prenotazione specificando una nuova data e ora;
@@ -33,18 +33,18 @@
             \item verificare che la prenotazione venga rifiutata per un errore specificato.
         \end{itemize}&
         NI\\
-        TA3&
-        L'utente autenticato e l'amministratore devono poter essere in grado di eliminare una prenotazione.\newline
-        All'utente autenticato e all'amministratore viene chiesto di:
+        TA1.3&
+        Il dipendente registrato e l'amministratore devono poter essere in grado di eliminare una prenotazione.\newline
+        Al dipendente registrato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di cancellazione di una prenotazione;
             \item verificare che sia possibile eliminaree una prenotazione effettuata in precedenza per una specifica data e ora;
             \item verificare che la prenotazione venga eliminata.
         \end{itemize}&
         NI\\
-        TA4&
-        L'utente autenticato e l'amministratore devono poter essere in grado di visualizzare le prenotazioni attive nel sistema.\newline
-        All'utente autenticato e all'amministratore viene chiesto di:
+        TA1.4&
+        Il dipendente registrato e l'amministratore devono poter essere in grado di visualizzare le prenotazioni attive nel sistema.\newline
+        Al dipendente registrato e all'amministratore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
             \item verificare che siano elencate correttamente tutte le sue prenotazioni attive.
@@ -52,7 +52,7 @@
             \item verificare che sia visualizzato un messaggio di errore indicando che non esistono prenotazioni attive.
         \end{itemize}&
         NI\\
-        TA5&
+        TA1.5&
         L'amministratore deve poter essere in grado di impedire prenotazioni su una postazione.\newline
         All'amministratore viene chiesto di:
         \begin{itemize}
@@ -61,17 +61,27 @@
             \item verificare che la postazione non permetta la prenotazione.
         \end{itemize}&
         NI\\
-        TA6&
-        L'amministratore, l'utente autenticato e l'igienizzatore devono poter essere in grado di vedere e gestire lo stato di tutte le postazioni a cui ha accesso.\newline
-        All'amministratore, all'utente autenticato e all'igienizzatore viene chiesto di:
+        TA1.6&
+        L'amministratore, il dipendente registrato e l'igienizzatore devono poter essere in grado di vedere e gestire lo stato di tutte le postazioni a cui ha accesso.\newline
+        All'amministratore, al dipendente registrato e all'igienizzatore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di gestione delle postazioni;
             \item verificare che possa gestire le postazioni a cui ha accesso.
         \end{itemize}&
         NI\\
-        TA7&
-        L'amministratore, l'utente autenticato e l'igienizzatore devono poter essere in grado di marcare come igienizzata una postazione.\newline
-        All'amministratore, all'utente autenticato e all'igienizzatore viene chiesto di:
+        TA1.7&
+        L'amministratore e il dipendente registrato devono non essere in grado di prenotare una postazione già prenotata.\newline
+        All'amministratore e al dipendente registrato viene chiesto di:
+        \begin{itemize}
+            \item navigare all'apposita sezione di creazione di una prenotazione;
+            \item verificare che sia possibile creare una prenotazione specificando data e ora;
+            \item verificare che la prenotazione passi ad uno stato di "pending";
+            \item verificare che la prenotazione non venga effettuata.
+        \end{itemize}&
+        NI\\
+        TA2.1&
+        L'amministratore, il dipendente registrato e l'igienizzatore devono poter essere in grado di marcare come igienizzata una postazione.\newline
+        All'amministratore, al dipendente registrato e all'igienizzatore viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di gestione della postazione;
             \item verificare che possa marcare come igienizzata la postazione;
@@ -80,9 +90,9 @@
             \item verificare l'esito negativo della marcatura dovuto ad un errore specificato.
         \end{itemize}&
         NI\\
-        TA8&
-        L'amministratore e l'utente autenticato devono poter essere in grado di marcare come sporca una postazione.\newline
-        All'amministratore e all'utente autenticato viene chiesto di:
+        TA2.2&
+        L'amministratore e il dipendente registrato devono poter essere in grado di marcare come sporca una postazione.\newline
+        All'amministratore e al dipendente registrato viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di gestione della postazione;
             \item verificare che possa marcare come sporca la postazione utilizzata;
@@ -91,9 +101,9 @@
             \item verificare l'esito negativo della marcatura dovuto ad un errore specificato.
         \end{itemize}&
         NI\\
-        TA9&
-        L'amministratore e l'utente autenticato devono poter essere in grado di marcare come libera una postazione.\newline
-        All'amministratore e all'utente autenticato viene chiesto di:
+        TA3.1&
+        L'amministratore e il dipendente registrato devono poter essere in grado di marcare come libera una postazione.\newline
+        All'amministratore e al dipendente registrato viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di gestione della postazione;
             \item verificare che possa marcare come libera la postazione utilizzata;
@@ -102,9 +112,9 @@
             \item verificare l'esito negativo della marcatura dovuto ad un errore specificato.
         \end{itemize}&
         NI\\
-        TA10&
-        L'amministratore e l'utente autenticato devono poter essere in grado di marcare come occupata una postazione.\newline
-        All'amministratore e all'utente autenticato viene chiesto di:
+        TA3.2&
+        L'amministratore e il dipendente registrato devono poter essere in grado di marcare come occupata una postazione.\newline
+        All'amministratore e al dipendente registrato viene chiesto di:
         \begin{itemize}
             \item navigare all'apposita sezione di gestione della postazione;
             \item verificare che possa marcare come occupata la postazione utilizzata;
@@ -113,15 +123,15 @@
             \item verificare l'esito negativo della marcatura dovuto ad un errore specificato.
         \end{itemize}&
         NI\\
-        TA11&
-        L'amministratore e l'utente autenticato devono poter essere in grado di confermare l'occupazione di una postazione prenotata.\newline
-        All'amministratore e all'utente autenticato viene chiesto di:
+        TA3.3&
+        L'amministratore e il dipendente registrato devono poter essere in grado di confermare l'occupazione di una postazione prenotata.\newline
+        All'amministratore e al dipendente registrato viene chiesto di:
         \begin{itemize}
             \item aprire la schermata pop-up di conferma della prenotazione;
             \item verificare l'esito della conferma della prenotazione.
         \end{itemize}&
         NI\\
-        TA12&
+        TA4.1&
         L'amministratore e l'igienizzatore devono poter essere in grado di disabilitare una postazione.\newline
         All'amministratore e all'igienizzatore viene chiesto di:
         \begin{itemize}
@@ -130,7 +140,7 @@
             \item verificare che la postazione non sia né prenotabile né servibile.
         \end{itemize}&
         NI\\
-        TA13&
+        TA4.2&
         L'amministratore e l'igienizzatore devono poter essere in grado di riabilitare una postazione precedentemente disabilitata.\newline
         All'amministratore e all'igienizzatore viene chiesto di:
         \begin{itemize}
@@ -139,7 +149,7 @@
             \item verificare che la postazione sia ora prenotabile e servibile.
         \end{itemize}&
         NI\\
-        TA14&
+        TA5&
         L'igienizzatore deve poter essere in grado di gestire le stanze o postazioni a cui ha accesso.\newline
         All'igienizzatore viene chiesto di:
         \begin{itemize}
