modifiche dopo la pull request

--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -14,7 +14,7 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \item conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID};
 \end{itemize}
 
-\subsection{Strumenti e tecnologie coinvolti}
+\subsection{Tecnologie coinvolte}
 \begin{itemize}
 \item \glo{RFID}: tecnologia a radiofrequenza per l'identificazione o trasmissione di informazioni;
 \item \glo{Java}, \glo{Python} o \glo{Node.js} per lo sviluppo del server back-end;
