--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -13,7 +13,7 @@ L’azienda proponente è particolarmente interessata a verificare la fattibilit
 \item Approfondimento delle principali tecnologie web.
 \end{itemize}
 
-\subsection{Strumenti e tecnologie coinvolte}
+\subsection{Tecnologie coinvolte}
 \begin{itemize}
 \item \glo{D3.js}: libreria javascript per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati;
 \item \glo{Node.js} oppure \glo{Apache Tomcat}: sviluppo del server \glo{back-end};
