--- a/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C6/main.tex
@@ -4,13 +4,12 @@ Il capitolato in questione si chiama "Progettazione e sviluppo di una {Real-time
 \subsection{Descrizione del capitolato}
 L’azienda Zero12 propone la creazione di un \glo{Realtime system} per la \glo{sincronizzazione} di un gioco a scorrimento verticale, multiplayer ed un'applicazione \glo{Android} o \glo{iOS} con finalità di \glo{testing} del software sviluppato che gestisce le varie componenti(RGP).
 La finalità da parte dell’azienda è vedere alcuni servizi che propone il pacchetto di AWS in azione nell’ambito real-time, ovvero la sincronizzazione dei giocatori in un gioco multiplayer a scorrimento verticale "infinito".
-\subsection{Prerequisiti e tecnologie coinvolte}
-Prerequisiti:
+\subsection{Prerequisiti}
 \begin{itemize}
 \item training sulle tecnologie coinvolte
 \item analisi della tematica coinvolta RGP 
 \end{itemize}
-Tecnologie coinvolte:
+\subsection{Tecnologie coinvolte}
 \begin{itemize}
 \item Utilizzo di \glo{Kotlin}/\glo{Swift} per lo sviluppo del applicativo mobile;
 \item Utilizzo di un \glo{IDE} per la creazione di applicazioni mobile (Android o iOS);
