--- a/DocumentiInterni/StudioDiFattibilita/src/C7/src/Descrizione.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/src/Descrizione.tex
@@ -1,1 +1,2 @@
 Lo scopo del progetto è la creazione di un algoritmo in grado di garantire il salvataggio in cloud del lavoro e contemporaneamente la sincronizzazione dei cambiamenti presenti in cloud utilizzando un'interfaccia multi-piattaforma che sfrutta l'algoritmo nei più importanti sistemi operativi desktop esistenti.
+Il prodotto finale sarà un algoritmo di sincronizzazione e un'interfaccia grafica utilizzabile con i sistemi operativi più diffusi(Linux, Windows, Mac) senza richiedere all'utente finale l'installazione manuale di ulteriori prodotti per il funzionamento. Requisito fondamentale è un Pattern MVC che permetterà un cambiamento rapido dell'algoritmo o dell'interfaccia utente.
