--- a/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
@@ -1,9 +1,10 @@
 \subsection{Scopo del Documento}
 Questo documento contiene la stesura dello studio di fattibilità riguardante i sette capitolati proposti, dove per ciascuno di essi vengono evidenziati i seguenti aspetti:
 \begin{itemize}
-    \item Titolo del capitolato;
-    \item Descrizione generale;
-    \item Prerequisiti e tecnologie coinvolte;
+    \item Informazioni generali;
+    \item Descrizione del capitolato;
+    \item Prerequisiti;
+    \item Tecnologie coinvolte;
     \item Vincoli;
     \item Aspetti positivi;
     \item Aspetti critici.
