--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -5,17 +5,20 @@
 \subsection{Descrizione del capitolato}
 \input{src/C2/src/Descrizione.tex}
 
-\subsection{Finalità del progetto}
-\input{src/C2/src/Finalita_del_progetto.tex}
+\subsection{Prerequisiti}
+\input{src/C2/src/Prerequisiti.tex}
 
-\subsection{Tecnologie interessate}
-\input{src/C2/src/Tecnologie_interessate.tex}
+\subsection{Tecnologie coinvolte}
+\input{src/C2/src/Tecnologie_coinvolte.tex}
+
+\subsection{Vincoli}
+\input{src/C2/src/Vincoli.tex}
 
 \subsection{Aspetti positivi}
 \input{src/C2/src/Aspetti_positivi.tex}
 
-\subsection{Criticità e fattori di rischio}
-\input{src/C2/src/Criticita_e_fattori_di_rischio.tex}
+\subsection{Aspetti critici}
+\input{src/C2/src/Aspetti_critici.tex}
 
 \subsection{Conclusioni}
 \input{src/C2/src/Conclusioni.tex}
