--- a/DocumentiInterni/StudioDiFattibilita/src/C2/src/Descrizione.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/src/Descrizione.tex
@@ -1,1 +1,1 @@
-EmporioLambda mira alla creazione di una piattaforma web serverless di vendita e/o acquisto di beni o servizi che utilizzano internet e il trasferimento di denaro e dati che permettono queste transizioni.
+L’obiettivo del capitolato è la creazione di una piattaforma web di e-commerce nella quale ci saranno due protagonisti principali come consumatori che acquisteranno diversi articoli sia fisici che di tipo servizi e produttori i quali metteranno a disposizione diversi beni. Il tutto tramite il trasferimento di denaro e dati per eseguire queste transazioni.
