--- a/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C7/main.tex
@@ -4,17 +4,20 @@
 \subsection{Descrizione del capitolato}
 \input{src/C7/src/Descrizione.tex}
 
-\subsection{Finalità del progetto}
-\input{src/C7/src/Finalita_del_progetto.tex}
+\subsection{Prerequisiti}
+\input{src/C7/src/Prerequisiti.tex}
 
-\subsection{Tecnologie interessate}
-\input{src/C7/src/Tecnologie_interessate.tex}
+\subsection{Tecnologie coinvolte}
+\input{src/C7/src/Tecnologie_coinvolte.tex}
+
+\subsection{Vincoli}
+\input{src/C7/src/Vincoli.tex}
 
 \subsection{Aspetti positivi}
 \input{src/C7/src/Aspetti_positivi.tex}
 
-\subsection{Criticità e fattori di rischio}
-\input{src/C7/src/Criticita_e_fattori_di_rischio.tex}
+\subsection{Aspetti critici}
+\input{src/C7/src/Aspetti_critici.tex}
 
 \subsection{Conclusioni}
 \input{src/C7/src/Conclusioni.tex}
